--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,9 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.2.3 <4.0.0'
 
-
 dependencies:
   animate_do: ^2.1.0
+  animated_splash_screen: ^1.3.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -27,13 +27,10 @@ dependencies:
 
 dev_dependencies:
   build_runner: 2.0.1
-  flutter_lints: ^2.0.0  
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  hive_generator: 1.1.0    
-
-
-
+  hive_generator: 1.1.0
 
 flutter:
 
@@ -42,5 +39,3 @@ flutter:
   assets:
     - assets/img/
     - assets/lottie/
-
-
